--- a/tema6/backend/despliegue-microservicios.html
+++ b/tema6/backend/despliegue-microservicios.html
@@ -158,14 +158,14 @@
 <ul>
 <li>Escalar horizontalmente cada funcionalidad en función de su demanda<sup class="footnote-reference"><a href="#1">1</a></sup>.</li>
 <li>Construir cada funcionalidad con la tecnología más adecuada, y evolucionarlas independientemente del resto<sup class="footnote-reference"><a href="#2">2</a></sup>.</li>
-<li>Evitar que los problemas en un microservicio afecten del resto del sistema, el cual puede seguir dando el servicio básico.</li>
+<li>Evitar que los problemas en un microservicio afecten al resto del sistema, el cual puede seguir dando el servicio básico.</li>
 </ul>
 <p><object type="image/svg+xml" data="./files/img/microservices.excalidraw.svg" width="100%"></object></p>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p>Para ello se utilizan <a href="../../intro/docker/docker.html">contenedores</a> y <a href="../../intro/docker/orquestacion.html">plataformas de gestión del hardware</a>.</p>
 </div>
 <div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
-<p>Pero manteniendo la definición de sus APIs (contratos con el resto de servicios y clientes).</p>
+<p>Pero manteniendo la definición de sus APIs (&quot;contratos&quot; con el resto de servicios y clientes).</p>
 </div>
 
                     </main>
