--- a/tema6/backend/spring-mvc-ssr.html
+++ b/tema6/backend/spring-mvc-ssr.html
@@ -155,7 +155,7 @@
 <h2 id="spring"><a class="header" href="#spring">Spring</a></h2>
 <h3 id="mvc"><a class="header" href="#mvc">MVC</a></h3>
 <h4 id="ssr"><a class="header" href="#ssr">SSR</a></h4>
-<p>Para generar la presentación en el servidor, normalmente se utiliza un lenguaje para procesar textos. Spring permite configurar uno de entre <a href="https://docs.spring.io/spring-framework/docs/6.0.6/reference/html/web.html#mvc-view">varias librerías</a>. En nuestro caso usaremos <a href="https://www.thymeleaf.org/index.html">Thymeleaf</a>.</p>
+<p>Para generar la presentación en el servidor, normalmente se utiliza un lenguaje para procesar textos. Spring permite configurar uno de entre <a href="https://docs.spring.io/spring-framework/docs/6.0.6/reference/html/web.html#mvc-view">varias librerías</a>. En nuestro caso usaremos <a href="https://www.thymeleaf.org/doc/articles/standarddialect5minutes.html">Thymeleaf</a>.</p>
 <p>Vamos a crear un endpoint/recurso SSR <code>/saludo?nombre=tu-nombre</code> que devuelva un HTML mostrando un párrafo con el texto &quot;¡Hola, tu-nombre!&quot;. Sobre el proyecto MVC generado anteriormente:</p>
 <ol>
 <li>
