--- a/print.html
+++ b/print.html
@@ -1571,7 +1571,7 @@ Más información sobre accesibilidad &lt;a href=&quot;&quot;&gt;aquí&lt;/a&gt;
 </blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="html-17"><a class="header" href="#html-17">HTML</a></h1>
 <h2 id="vulnerabilidades"><a class="header" href="#vulnerabilidades">Vulnerabilidades</a></h2>
-<p>&quot;HTML injection&quot; consiste en introducir código HTML malicioso en un formulario o parámetro de la URL que luego será utilizado como contenido en la propia web<sup class="footnote-reference"><a href="#1">1</a></sup>. El código malicioso puede consistir en añadir código HTML/JavaScript<sup class="footnote-reference"><a href="#2">2</a></sup> para robar las cookies de sesión. Otro uso malicioso, que no usa JavaScript, es inyectar un <code>iframe</code>, que simula la página de sesión caducada de una web legítima, para que la víctima introduzca nuevamente sus credenciales (que llegarán al servidor del atacante en el que está alojada).</p>
+<p>HTML Injection consiste en introducir código HTML malicioso en un formulario o parámetro de la URL que luego será utilizado como contenido en la propia web<sup class="footnote-reference"><a href="#1">1</a></sup>. El código malicioso puede consistir en añadir código HTML/JavaScript<sup class="footnote-reference"><a href="#2">2</a></sup> para robar las cookies de sesión. Otro uso malicioso, que no usa JavaScript, es inyectar un <code>iframe</code>, que simula la página de sesión caducada de una web legítima, para que la víctima introduzca nuevamente sus credenciales (que llegarán al servidor del atacante en el que está alojada).</p>
 <p>A continuación vamos a demostrar la vulnerabilidad en una página que procesa el envío de un formulario<sup class="footnote-reference"><a href="#3">3</a></sup>:</p>
 <iframe src="./files/form-xss.html" width="100%" height="235" style="background:white;"></iframe>
 <ol>
@@ -4644,16 +4644,17 @@ const fizzBuzz = function fizzBuzz(numero) {
 <p>En el caso de Spring Boot, la dependencia <a href="https://docs.spring.io/spring-boot/docs/1.5.7.RELEASE/reference/html/boot-features-testing.html"><code>spring-boot-starter-test</code></a> nos incluye varias librerías que nos facilitan la creación de tests unitarios y de integración. Por ejemplo, <code>@WebMvcTest</code> y <code>MockMvc</code> nos permiten probar los componentes que implementan un endpoint REST sin necesidad de levantar el servidor:</p>
 <pre><code class="language-java">@WebMvcTest(ControladorRest.class)
 class ControladorRestIntegrationTest {
-  @Autowired
-  private MockMvc mockMvc;
+  @Autowired private MockMvc mockMvc;
 
-  @Test
-  void creaContadorOkTest() throws Exception {
+  @Test void creaContadorOkTest() throws Exception {
+    // Given ...
     String contador = &quot;{\&quot;nombre\&quot;:\&quot;visitas\&quot;,\&quot;valor\&quot;:0}&quot;;
+    // When ...
     this.mockMvc
         .perform(MockMvcRequestBuilders.post(&quot;/api/contadores&quot;)
            .contentType(MediaType.APPLICATION_JSON)
            .content(contador))
+    // Then ...
         .andExpect(MockMvcResultMatchers.status().isCreated())
         .andExpect(MockMvcResultMatchers.content().string(contador));
   }
@@ -4684,10 +4685,13 @@ class ControladorRestIntegrationTest {
 <p>Para probar interfaces web, existen herramientas como <a href="https://www.cypress.io/">Cypress</a> que automatizan interacciones sobre la página a testear. El siguiente código prueba el envío y respuesta de un formulario:</p>
 <pre><code class="language-js">describe('Formulario de contacto', () =&gt; {
   it('al enviar datos correctos muestra feedback positivo', () =&gt; {
+    // Given ...
     cy.visit('http://localhost:8080/contacto');
+    // When ...
     cy.get('#email').type('usuario@email.com');
     cy.get('#message').type('Probando Cypress.io');
     cy.get('input[value=&quot;Enviar&quot;]').click();
+    // Then ...
     cy.contains('p', 'Gracias usuario@email.com, tu mensaje ha sido recibido.');
   });
 });
@@ -4702,21 +4706,22 @@ class ControladorRestIntegrationTest {
 <p>Para interfaces REST, existen herramientas gráficas como Postman que permiten probar manual y <a href="https://medium.com/better-practices/from-manual-to-automated-testing-the-roadblocks-and-the-journey-6333dfacc5ae">automáticamente</a>. Spring Boot también facilita hacer tests E2E levantando automáticamente el servidor:</p>
 <pre><code class="language-java">@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.DEFINED_PORT)
 class ControladorRestE2ETest {
-  @Autowired
-  private final TestRestTemplate restTemplate;
+  @Autowired private final TestRestTemplate restTemplate;
 
-  @Test
-  public void contadorExistenteTest() {
+  @Test public void contadorExistenteTest() {
+    // Given ...
     restTemplate.exchange(
       &quot;http://localhost:8080/api/contadores&quot;, HttpMethod.POST,
       new HttpEntity&lt;&gt;(new ModeloContador(&quot;visitas&quot;, 0L)), ModeloContador.class
     );
-
-    Assertions.assertEquals(
-      HttpStatus.OK,
-      restTemplate.exchange(
-        &quot;http://localhost:8080/api/contadores/visitas&quot;, HttpMethod.GET,
-        HttpEntity.EMPTY, Void.class).getStatusCode());
+    // When ...
+    ResponseEntity&lt;ModeloContador&gt; response = restTemplate.exchange(
+      &quot;http://localhost:8080/api/contadores/visitas&quot;,
+      HttpMethod.GET, HttpEntity.EMPTY, ModeloContador.class);
+    // Then ...
+    Assertions.assertEquals(HttpStatus.OK, response.getStatusCode());
+    Assertions.assertEquals(&quot;visitas&quot;, response.getBody().nombre());
+    Assertions.assertEquals(0L, response.getBody().valor());    
   }
 }
 </code></pre>
@@ -4814,13 +4819,17 @@ INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
   VALUES (2, 'boss@e.m', 'Ym9zc0BlLm06Ym9z');
 INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
   VALUES (3, 'user@e.m', 'dXNlckBlLm06dXNlcg==');
+INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
+  VALUES (4, 'guest@e.m', 'dXNlckBlLm06dXNlcg==');
+INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
+  VALUES (5, 'test@e.m', 'dXNlckBlLm06dXNlcg==');
 
 INSERT INTO OPERACION (ID, USUARIO_ID, CONTADOR_ID, TIPO, FECHA)
   VALUES (1, 1, 1, 'creación', '2023-01-01 00:00:00');
 INSERT INTO OPERACION (ID, USUARIO_ID, CONTADOR_ID, TIPO, FECHA)
   VALUES (2, 1, 2, 'creación', '2023-02-14 00:00:00');
 INSERT INTO OPERACION (ID, USUARIO_ID, CONTADOR_ID, TIPO, FECHA)
-  VALUES (3, 1, 1, 'incremento', '2023-03-11 00:00:00');
+  VALUES (3, 2, 2, 'incremento', '2023-03-11 00:00:00');
 
 -- Para actualizar:
 UPDATE CONTADOR 
@@ -4837,14 +4846,15 @@ DELETE FROM USUARIO
 
 </pre>
 <blockquote>
-<p>⁉️ <strong>Ejercicio 1:</strong> <em>Explica qué devolvería la siguiente consulta SQL:</em></p>
+<p>⁉️ <strong>Ejercicio 1:</strong> <em>Explica qué devolvería la siguiente consulta SQL<sup class="footnote-reference"><a href="#1">1</a></sup>:</em></p>
 <pre><code class="language-sql">SELECT USUARIO.EMAIL, OPERACION.TIPO, CONTADOR.NOMBRE
-  FROM USUARIO, OPERACION, CONTADOR
-  WHERE USUARIO.ID = OPERACION.USUARIO_ID
-  AND OPERACION.CONTADOR_ID = CONTADOR.ID;
+FROM USUARIO, OPERACION, CONTADOR
+WHERE USUARIO.ID = OPERACION.USUARIO_ID
+AND OPERACION.CONTADOR_ID = CONTADOR.ID;
 </code></pre>
 <details><summary><em>Diagrama...</em></summary><br>
 <object type="image/svg+xml" data="./files/img/select.excalidraw.svg" width="100%"></object>
+<em>Un <code>SELECT</code> con varias tablas se puede ver como una lista de correspondencias de la <a href="https://es.wikipedia.org/wiki/Correspondencia_matem%C3%A1tica">Teoría de Conjuntos</a>.</em>
 </details>
 <br>
 </blockquote>
@@ -4857,6 +4867,15 @@ DELETE FROM USUARIO
 <blockquote>
 <p>⁉️ <strong>Ejercicio 4:</strong> <em>Intenta borrar el contador 'visitas' y explica el resultado.</em></p>
 </blockquote>
+<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
+<p>Otro tipo de <code>SELECT</code> involucrando varias tablas, utiliza <code>JOIN</code> para añadir datos de otras tablas a los elementos de la tabla indicada en el <code>FROM</code>. Por ejemplo, la siguiente SQL lista todos los usuarios, hayan o no hecho operaciones (al contrario que la <code>SELECT</code> del ejercicio 1, que sólo puede mostrar los que tienen operaciones/correspondencias): <details><summary><i class="fa fa-database" aria-hidden="true"></i></summary><br></p>
+<pre><code class="language-sql">SELECT USUARIO.EMAIL, OPERACION.TIPO, CONTADOR.NOMBRE 
+FROM USUARIO 
+LEFT JOIN OPERACION ON USUARIO.ID = OPERACION.USUARIO_ID 
+LEFT JOIN CONTADOR ON OPERACION.CONTADOR_ID = CONTADOR.ID
+</code></pre>
+<p><object type="image/svg+xml" data="./files/img/join.excalidraw.svg" width="100%"></object></p>
+</details></div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="persistencia-4"><a class="header" href="#persistencia-4">Persistencia</a></h1>
 <h2 id="jdbc-y-jpa"><a class="header" href="#jdbc-y-jpa">JDBC y JPA</a></h2>
 <p>SQL se ha de ejecutar directamente en la BD. Para usarlo desde un programa es necesario enviarlo. </p>
@@ -5038,13 +5057,12 @@ INSERT INTO usuario (email, credenciales) VALUES ('boss@e.m', 'Basic Ym9zc0BlLm0
 <p>⁉️ <strong>Ejercicio 1:</strong> <em>Implementa en el API un recurso <code>GET /api/contadores/{nombre}/operaciones</code> que devuelva la lista de <code>Operacion</code> cuyo <code>contadorId</code> sea igual al del contador indicado en la petición. Prueba el nuevo endpoint, e indica el inconveniente de la respuesta JSON generada.</em></p>
 </blockquote>
 <p>Para definir las relaciones entre los campos de las entidades se utilizan anotaciones: <code>@ManyToOne</code>, <code>@OneToOne</code>, <code>@ManyToMany</code>, etc. Por ejemplo, para las relaciones de nuestro modelo:</p>
-<pre><code class="language-java">@Entity
-public class Operacion {
-    @Id @GeneratedValue(strategy = GenerationType.IDENTITY) public Long id;
-    @ManyToOne(optional = false) public Usuario usuario;
-    @ManyToOne(optional = false) public Contador contador;
-    @Column(nullable = false) public String tipo;
-    @Column(nullable = false) public Timestamp fecha;
+<pre><code class="language-java">@Entity public class Operacion {
+  @Id @GeneratedValue(strategy = GenerationType.IDENTITY) public Long id;
+  @ManyToOne(optional = false) public Usuario usuario;
+  @ManyToOne(optional = false) public Contador contador;
+  @Column(nullable = false) public String tipo;
+  @Column(nullable = false) public Timestamp fecha;
 }
 </code></pre>
 <blockquote>
@@ -5061,11 +5079,11 @@ public class Operacion {
 <h2 id="spring-data-7"><a class="header" href="#spring-data-7">Spring Data</a></h2>
 <h3 id="tests-10"><a class="header" href="#tests-10">Tests</a></h3>
 <p>Para hacer tests de integración de JPA se utiliza la anotación <code>@DataJpaTest</code> que automáticamente configura una BD en memoria cuyos datos se resetean en cada test.</p>
-<pre><code class="language-java">@DataJpaTest
-class RepoOperacionTest {
+<pre><code class="language-java">@DataJpaTest class RepoOperacionTest {
   @Autowired RepoOperacion repoOperacion;
 
   @Test void jpaTest() {
+    // Given ...
     Usuario usuario = new Usuario();
     usuario.id = 1L;
     Contador contador = new Contador();
@@ -5075,12 +5093,12 @@ class RepoOperacionTest {
     operacion.fecha = Timestamp.from(Instant.now());
     operacion.contador = contador;
     operacion.usuario = usuario;
-
+    // When ...
     DataIntegrityViolationException error = null;
     try { 
       repoOperacion.save(operacion); 
     } catch (DataIntegrityViolationException e) { error = e; }
-
+    // Then ...
     assertNotNull(error);
   }
 }
@@ -5091,33 +5109,46 @@ class RepoOperacionTest {
 <div style="break-before: page; page-break-before: always;"></div><h1 id="persistencia-13"><a class="header" href="#persistencia-13">Persistencia</a></h1>
 <h2 id="spring-data-8"><a class="header" href="#spring-data-8">Spring Data</a></h2>
 <h3 id="jdbc"><a class="header" href="#jdbc">JDBC</a></h3>
+<p>Hay situaciones en las que es mejor no usar JPA<sup class="footnote-reference"><a href="#1">1</a></sup> y, en su lugar, codificar directamente las SQL que necesita el programa. Para enviarlas a la BD, Spring Data nos facilita el cliente JDBC <code>JdbcTemplate</code>.</p>
+<p>Una de las vulnerabilidades típicas en este contexto es el SQL Injection<sup class="footnote-reference"><a href="#2">2</a></sup>. A continuación, exploramos esta vulnerabilidad utilizando <code>JdbcTemplate</code> de forma incorrecta y de forma correcta.</p>
 <pre><code class="language-java">@DataJpaTest class JdbcTemplateTest {
   @Autowired JdbcTemplate jdbc;
   String credencialesIntroducidasPorUsuarioMalicioso = &quot;'credenciales incorrectas' OR ID = 1&quot;;
 
   @Test void codigoVulnerableSqlInjectionTest() {
+    // Given ...
     String sql = &quot;SELECT * FROM USUARIO WHERE CREDENCIALES = &quot; + credencialesIntroducidasPorUsuarioMalicioso;
-
+    // When ...
     Map&lt;String, Object&gt; usuarioAutenticado = jdbc.queryForMap(sql);
-
+    // Then ...
     assertNotNull(usuarioAutenticado);
     assertEquals(1L, usuarioAutenticado.get(&quot;ID&quot;));
   }
 
   @Test void codigoProtegidoSqlInjectionTest() {
+    // Given ...
     String sqlParametrizada = &quot;SELECT * FROM USUARIO WHERE CREDENCIALES = ?&quot;;
     EmptyResultDataAccessException errorUsuarioNoEncontrado = null;
     Map&lt;String, Object&gt; usuarioAutenticado = null;
-
+    // When ...
     try {
       usuarioAutenticado = jdbc.queryForMap(sqlParametrizada, credencialesIntroducidasPorUsuarioMalicioso);
     } catch (EmptyResultDataAccessException e) { errorUsuarioNoEncontrado = e; }
-
+    // Then ...
     assertNull(usuarioAutenticado);
     assertNotNull(errorUsuarioNoEncontrado);
   }
 }
 </code></pre>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Cómo se te ocurriría explotar la vulnerabilidad SQL Injection? ¿A qué otra vulnerabilidad te recuerda?</em></p>
+</blockquote>
+<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
+<p>Cuando la BD ya ha sido creada, y tiene un modelo de datos difícil de representar con entidades, cuando hay que usar SQLs específicas para optimizar, etc.</p>
+</div>
+<div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
+<p>Ocurre cuando un usuario malicioso introduce en algún lugar del interfaz de la aplicación, un SQL que acaba llegando al código que llama a la BD.</p>
+</div>
 
                     </main>
 
