--- a/tema8/persistencia/spring-data-jdbc.html
+++ b/tema8/persistencia/spring-data-jdbc.html
@@ -154,33 +154,46 @@
                         <h1 id="persistencia"><a class="header" href="#persistencia">Persistencia</a></h1>
 <h2 id="spring-data"><a class="header" href="#spring-data">Spring Data</a></h2>
 <h3 id="jdbc"><a class="header" href="#jdbc">JDBC</a></h3>
+<p>Hay situaciones en las que es mejor no usar JPA<sup class="footnote-reference"><a href="#1">1</a></sup> y, en su lugar, codificar directamente las SQL que necesita el programa. Para enviarlas a la BD, Spring Data nos facilita el cliente JDBC <code>JdbcTemplate</code>.</p>
+<p>Una de las vulnerabilidades típicas en este contexto es el SQL Injection<sup class="footnote-reference"><a href="#2">2</a></sup>. A continuación, exploramos esta vulnerabilidad utilizando <code>JdbcTemplate</code> de forma incorrecta y de forma correcta.</p>
 <pre><code class="language-java">@DataJpaTest class JdbcTemplateTest {
   @Autowired JdbcTemplate jdbc;
   String credencialesIntroducidasPorUsuarioMalicioso = &quot;'credenciales incorrectas' OR ID = 1&quot;;
 
   @Test void codigoVulnerableSqlInjectionTest() {
+    // Given ...
     String sql = &quot;SELECT * FROM USUARIO WHERE CREDENCIALES = &quot; + credencialesIntroducidasPorUsuarioMalicioso;
-
+    // When ...
     Map&lt;String, Object&gt; usuarioAutenticado = jdbc.queryForMap(sql);
-
+    // Then ...
     assertNotNull(usuarioAutenticado);
     assertEquals(1L, usuarioAutenticado.get(&quot;ID&quot;));
   }
 
   @Test void codigoProtegidoSqlInjectionTest() {
+    // Given ...
     String sqlParametrizada = &quot;SELECT * FROM USUARIO WHERE CREDENCIALES = ?&quot;;
     EmptyResultDataAccessException errorUsuarioNoEncontrado = null;
     Map&lt;String, Object&gt; usuarioAutenticado = null;
-
+    // When ...
     try {
       usuarioAutenticado = jdbc.queryForMap(sqlParametrizada, credencialesIntroducidasPorUsuarioMalicioso);
     } catch (EmptyResultDataAccessException e) { errorUsuarioNoEncontrado = e; }
-
+    // Then ...
     assertNull(usuarioAutenticado);
     assertNotNull(errorUsuarioNoEncontrado);
   }
 }
 </code></pre>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Cómo se te ocurriría explotar la vulnerabilidad SQL Injection? ¿A qué otra vulnerabilidad te recuerda?</em></p>
+</blockquote>
+<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
+<p>Cuando la BD ya ha sido creada, y tiene un modelo de datos difícil de representar con entidades, cuando hay que usar SQLs específicas para optimizar, etc.</p>
+</div>
+<div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
+<p>Ocurre cuando un usuario malicioso introduce en algún lugar del interfaz de la aplicación, un SQL que acaba llegando al código que llama a la BD.</p>
+</div>
 
                     </main>
 
