--- a/tema8/persistencia/sql.html
+++ b/tema8/persistencia/sql.html
@@ -201,13 +201,17 @@ INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
   VALUES (2, 'boss@e.m', 'Ym9zc0BlLm06Ym9z');
 INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
   VALUES (3, 'user@e.m', 'dXNlckBlLm06dXNlcg==');
+INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
+  VALUES (4, 'guest@e.m', 'dXNlckBlLm06dXNlcg==');
+INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
+  VALUES (5, 'test@e.m', 'dXNlckBlLm06dXNlcg==');
 
 INSERT INTO OPERACION (ID, USUARIO_ID, CONTADOR_ID, TIPO, FECHA)
   VALUES (1, 1, 1, 'creación', '2023-01-01 00:00:00');
 INSERT INTO OPERACION (ID, USUARIO_ID, CONTADOR_ID, TIPO, FECHA)
   VALUES (2, 1, 2, 'creación', '2023-02-14 00:00:00');
 INSERT INTO OPERACION (ID, USUARIO_ID, CONTADOR_ID, TIPO, FECHA)
-  VALUES (3, 1, 1, 'incremento', '2023-03-11 00:00:00');
+  VALUES (3, 2, 2, 'incremento', '2023-03-11 00:00:00');
 
 -- Para actualizar:
 UPDATE CONTADOR 
@@ -224,14 +228,15 @@ DELETE FROM USUARIO
 
 </pre>
 <blockquote>
-<p>⁉️ <strong>Ejercicio 1:</strong> <em>Explica qué devolvería la siguiente consulta SQL:</em></p>
+<p>⁉️ <strong>Ejercicio 1:</strong> <em>Explica qué devolvería la siguiente consulta SQL<sup class="footnote-reference"><a href="#1">1</a></sup>:</em></p>
 <pre><code class="language-sql">SELECT USUARIO.EMAIL, OPERACION.TIPO, CONTADOR.NOMBRE
-  FROM USUARIO, OPERACION, CONTADOR
-  WHERE USUARIO.ID = OPERACION.USUARIO_ID
-  AND OPERACION.CONTADOR_ID = CONTADOR.ID;
+FROM USUARIO, OPERACION, CONTADOR
+WHERE USUARIO.ID = OPERACION.USUARIO_ID
+AND OPERACION.CONTADOR_ID = CONTADOR.ID;
 </code></pre>
 <details><summary><em>Diagrama...</em></summary><br>
 <object type="image/svg+xml" data="./files/img/select.excalidraw.svg" width="100%"></object>
+<em>Un <code>SELECT</code> con varias tablas se puede ver como una lista de correspondencias de la <a href="https://es.wikipedia.org/wiki/Correspondencia_matem%C3%A1tica">Teoría de Conjuntos</a>.</em>
 </details>
 <br>
 </blockquote>
@@ -244,6 +249,15 @@ DELETE FROM USUARIO
 <blockquote>
 <p>⁉️ <strong>Ejercicio 4:</strong> <em>Intenta borrar el contador 'visitas' y explica el resultado.</em></p>
 </blockquote>
+<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
+<p>Otro tipo de <code>SELECT</code> involucrando varias tablas, utiliza <code>JOIN</code> para añadir datos de otras tablas a los elementos de la tabla indicada en el <code>FROM</code>. Por ejemplo, la siguiente SQL lista todos los usuarios, hayan o no hecho operaciones (al contrario que la <code>SELECT</code> del ejercicio 1, que sólo puede mostrar los que tienen operaciones/correspondencias): <details><summary><i class="fa fa-database" aria-hidden="true"></i></summary><br></p>
+<pre><code class="language-sql">SELECT USUARIO.EMAIL, OPERACION.TIPO, CONTADOR.NOMBRE 
+FROM USUARIO 
+LEFT JOIN OPERACION ON USUARIO.ID = OPERACION.USUARIO_ID 
+LEFT JOIN CONTADOR ON OPERACION.CONTADOR_ID = CONTADOR.ID
+</code></pre>
+<p><object type="image/svg+xml" data="./files/img/join.excalidraw.svg" width="100%"></object></p>
+</details></div>
 
                     </main>
 
