--- a/tema7/tests/herramientas-e2e-api.html
+++ b/tema7/tests/herramientas-e2e-api.html
@@ -162,18 +162,19 @@ class ControladorRestE2ETest {
 
   @Test public void contadorExistenteTest() {
     // Given ...
+    String contador = &quot;{\&quot;nombre\&quot;:\&quot;visitas\&quot;,\&quot;valor\&quot;:0}&quot;;
+    HttpHeaders headers = new HttpHeaders();
+    headers.setContentType(MediaType.APPLICATION_JSON);
     restTemplate.exchange(
       &quot;http://localhost:8080/api/contadores&quot;, HttpMethod.POST,
-      new HttpEntity&lt;&gt;(new ModeloContador(&quot;visitas&quot;, 0L)), ModeloContador.class
-    );
+      new HttpEntity&lt;&gt;(contador, headers), String.class);
     // When ...
-    ResponseEntity&lt;ModeloContador&gt; response = restTemplate.exchange(
+    ResponseEntity&lt;String&gt; response = restTemplate.exchange(
       &quot;http://localhost:8080/api/contadores/visitas&quot;,
-      HttpMethod.GET, HttpEntity.EMPTY, ModeloContador.class);
+      HttpMethod.GET, HttpEntity.EMPTY, String.class);
     // Then ...
     Assertions.assertEquals(HttpStatus.OK, response.getStatusCode());
-    Assertions.assertEquals(&quot;visitas&quot;, response.getBody().nombre());
-    Assertions.assertEquals(0L, response.getBody().valor());    
+    Assertions.assertEquals(contador, response.getBody());
   }
 }
 </code></pre>
