--- a/tema8/persistencia/sql.html
+++ b/tema8/persistencia/sql.html
@@ -190,11 +190,6 @@ CREATE TABLE OPERACION (
 );
 
 -- Para añadir datos:
-INSERT INTO CONTADOR (ID, NOMBRE, VALOR)
-  VALUES (1, 'visitas', 1);
-INSERT INTO CONTADOR (ID, NOMBRE, VALOR)
-  VALUES (2, 'clicks', 0);
-
 INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
   VALUES (1, 'admin@e.m', 'YWRtaW5AZS5tOmFkbWlu');
 INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
@@ -205,6 +200,11 @@ INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
   VALUES (4, 'guest@e.m', 'dXNlckBlLm06dXNlcg==');
 INSERT INTO USUARIO (ID, EMAIL, CREDENCIALES)
   VALUES (5, 'test@e.m', 'dXNlckBlLm06dXNlcg==');
+
+INSERT INTO CONTADOR (ID, NOMBRE, VALOR)
+  VALUES (1, 'visitas', 0);
+INSERT INTO CONTADOR (ID, NOMBRE, VALOR)
+  VALUES (2, 'clicks', 1);
 
 INSERT INTO OPERACION (ID, USUARIO_ID, CONTADOR_ID, TIPO, FECHA)
   VALUES (1, 1, 1, 'creación', '2023-01-01 00:00:00');
@@ -232,7 +232,8 @@ DELETE FROM USUARIO
 <pre><code class="language-sql">SELECT USUARIO.EMAIL, OPERACION.TIPO, CONTADOR.NOMBRE
 FROM USUARIO, OPERACION, CONTADOR
 WHERE USUARIO.ID = OPERACION.USUARIO_ID
-AND OPERACION.CONTADOR_ID = CONTADOR.ID;
+AND OPERACION.CONTADOR_ID = CONTADOR.ID
+ORDER BY USUARIO.ID;
 </code></pre>
 <details><summary><em>Diagrama...</em></summary><br>
 <object type="image/svg+xml" data="./files/img/select.excalidraw.svg" width="100%"></object>
@@ -255,6 +256,7 @@ AND OPERACION.CONTADOR_ID = CONTADOR.ID;
 FROM USUARIO 
 LEFT JOIN OPERACION ON USUARIO.ID = OPERACION.USUARIO_ID 
 LEFT JOIN CONTADOR ON OPERACION.CONTADOR_ID = CONTADOR.ID
+ORDER BY USUARIO.ID;
 </code></pre>
 <p><object type="image/svg+xml" data="./files/img/join.excalidraw.svg" width="100%"></object></p>
 </details></div>
