deploy: 5d3565e8e732396749af1313bc11c9792c9d0d3b

--- a/print.html
+++ b/print.html
@@ -4032,6 +4032,9 @@ foto.onclick = function() {
 </li>
 </ol>
 <blockquote>
+<p>⚠️ <strong>Importante</strong>: <em>Todos los fragmentos de código Java de esta web no incluyen los correspondientes <code>imports</code>. Tras copiarlos y pegarlos, es necesario importarlos en el IntelliJ pulsando <kbd>alt</kbd><code>+</code><kbd>↲</kbd> sobre la clase en rojo no reconocida.</em></p>
+</blockquote>
+<blockquote>
 <p>⁉️ <strong>Ejercicio 1:</strong> <em>Compila y ejecuta el proyecto desde el IDE. Abre en un navegador la URL <a href="http://localhost:8080/saludo?nombre=tu-nombre"><code>http://localhost:8080/saludo?nombre=tu-nombre</code></a>. Pon un punto de ruptura dentro de la función <code>saludo</code> y ejecuta en modo depuración. Comprueba qué pasa cuando no se envía ningún nombre. Modifica el código para que el nombre sea obligatorio.</em></p>
 </blockquote>
 <blockquote>
