--- a/print.html
+++ b/print.html
@@ -3943,6 +3943,15 @@ foto.onclick = function() {
 </li>
 </ol>
 <p><object type="image/svg+xml" data="./files/img/ssr-api-rest.excalidraw.svg" width="100%"></object></p>
+<blockquote>
+<p>🔍 <strong>Nota:</strong> <em>La estrategia seguida en el backend influirá en su frontend web, que podrá ser de tipo multipágina o de página única.</em></p>
+<details><summary><em>Multipágina...</em></summary><br>
+<object type="image/svg+xml" data="./files/img/web.multipagina.excalidraw.svg" width="100%"></object>
+</details>
+<details><summary><em>Página única...</em></summary><br>
+<object type="image/svg+xml" data="./files/img/web.spa.excalidraw.svg" width="100%"></object>
+</details><br>
+</blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="backend-3"><a class="header" href="#backend-3">Backend</a></h1>
 <h2 id="patrón-mvc"><a class="header" href="#patrón-mvc">Patrón MVC</a></h2>
 <p>Modelo-Vista-Controlador es el patrón de software que suele utilizarse para dividir la lógica de una aplicación web:</p>
