--- a/tema6/backend/tipos.html
+++ b/tema6/backend/tipos.html
@@ -163,6 +163,15 @@
 </li>
 </ol>
 <p><object type="image/svg+xml" data="./files/img/ssr-api-rest.excalidraw.svg" width="100%"></object></p>
+<blockquote>
+<p>🔍 <strong>Nota:</strong> <em>La estrategia seguida en el backend influirá en su frontend web, que podrá ser de tipo multipágina o de página única.</em></p>
+<details><summary><em>Multipágina...</em></summary><br>
+<object type="image/svg+xml" data="./files/img/web.multipagina.excalidraw.svg" width="100%"></object>
+</details>
+<details><summary><em>Página única...</em></summary><br>
+<object type="image/svg+xml" data="./files/img/web.spa.excalidraw.svg" width="100%"></object>
+</details><br>
+</blockquote>
 
                     </main>
 
