deploy: e04ea238de827ffe68cf744610a139575249b333

--- a/tema5/js/apis-bom.html
+++ b/tema5/js/apis-bom.html
@@ -179,7 +179,7 @@
                         <h1 id="javascript"><a class="header" href="#javascript">JavaScript</a></h1>
 <h2 id="web-apis"><a class="header" href="#web-apis">Web APIs</a></h2>
 <h3 id="bom"><a class="header" href="#bom"><abbr title="Browser Object Model">BOM</abbr></a></h3>
-<p>Es el interfaz con el que JavaScript interacciona con el navegador. Está compuesto por <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window">varias APIs</a>. Estas son algunas de ellas que puedes probar en la consola JavaScript del navegador:</p>
+<p>Es la interfaz con el que JavaScript interacciona con el navegador. Está compuesto por <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window">varias APIs</a>. Estas son algunas de ellas que puedes probar en la consola JavaScript del navegador:</p>
 <h4 id="url-ventana-actual"><a class="header" href="#url-ventana-actual">URL ventana actual</a></h4>
 <pre><code class="language-js">location.reload(true);
 location.href = 'https://developer.mozilla.org/en-US/docs/Web/API/Window/location';
