--- a/tema7/tests/herramientas-e2e.html
+++ b/tema7/tests/herramientas-e2e.html
@@ -182,7 +182,7 @@
 <p>Estos tests suelen ser más lentos y de mantenimiento costoso ya que prueban funcionalidades que abarcan sistemas enteros y, por tanto, tienen mayor probabilidad de cambios en su comportamiento. Vemos dos tipos de herramientas o librerías: </p>
 <ul>
 <li>
-<p>Las que interaccionan con el interfaz de usuario (UI).</p>
+<p>Las que interaccionan con la interfaz de usuario (UI).</p>
 </li>
 <li>
 <p>Las que prueban interfaces de programación de aplicaciones (APIs).</p>
